Button alignment fix

--- a/src/components/pages/index/_home.scss
+++ b/src/components/pages/index/_home.scss
@@ -147,7 +147,7 @@ $animationSpeed: 40s;
     display: flex;
     flex-direction: column;
 
-    & button {
+    & a {
       align-self: end;
     }
 
